tests/conformance/invalid/transition_data_horizon_no_declarado.svp
transition_data T1 {
  horizon_ref: H_ausente;
  events: [];
  induced_parameters: [];
}
